# viral-clips-crew

./: .env  .gitignore  LICENSE  README.md  app.ipynb  app.py  audiodetach.py  clip_sub.py  clipper.py  crew.py  extracts.py  local_transcribe.py  local_whisper.py  mlx_local_transcribe.py  pyproject.toml  reboot.py  subtitler.py  transcribe.py  trimmer.py  utils.py  ytdl.py
.github/workflows/: pylint.yml
crew_output/: api_response.json
resources/: faster_subs_prompt.txt  yt_url_variants_list.txt
